[tool.poetry]
name = "dracalusb"
version = "0.1.0"
description = ""
authors = ["Mathias Alexander <mathias.alexander@irhythmtech.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
